Fix color contrast for comments

--- a/_sass/_syntaxhighlighting.scss
+++ b/_sass/_syntaxhighlighting.scss
@@ -10,7 +10,7 @@
 .highlight .p { color: #93a1a1 } /* Punctuation */
 .highlight .cm { color: #586e75 } /* Comment.Multiline */
 .highlight .cp { color: #859900 } /* Comment.Preproc */
-.highlight .c1 { color: #586e75 } /* Comment.Single */
+.highlight .c1 { color: #678189 } /* Comment.Single */
 .highlight .cs { color: #859900 } /* Comment.Special */
 .highlight .gd { color: #2aa198 } /* Generic.Deleted */
 .highlight .ge { color: #93a1a1; font-style: italic } /* Generic.Emph */
